// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Domain Components/LayoutView Default 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitFlex": 1,
      "flex": 1,
      "msFlex": "1 1 0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "display": "flex",
        "height": "100%",
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
  >
    <main>
      <div>
        Hello World!
      </div>
    </main>
  </div>
</div>
`;

exports[`Storyshots Domain Components/LoadingView Default 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitFlex": 1,
      "flex": 1,
      "msFlex": "1 1 0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "display": "flex",
        "height": "100%",
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
  />
</div>
`;

exports[`Storyshots Domain Components/LoadingView Not Loading 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitFlex": 1,
      "flex": 1,
      "msFlex": "1 1 0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "display": "flex",
        "height": "100%",
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
  />
</div>
`;

exports[`Storyshots Domain Components/LoadingView With Messages 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitFlex": 1,
      "flex": 1,
      "msFlex": "1 1 0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "display": "flex",
        "height": "100%",
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
  />
</div>
`;

exports[`Storyshots Domain Components/Task Default 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitFlex": 1,
      "flex": 1,
      "msFlex": "1 1 0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "display": "flex",
        "height": "100%",
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(204,204,204,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(204,204,204,1.00)",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "1px",
          "borderRightColor": "rgba(204,204,204,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(204,204,204,1.00)",
          "borderTopStyle": "solid",
          "borderTopWidth": "1px",
          "marginBottom": "12px",
          "marginLeft": "12px",
          "marginRight": "12px",
          "marginTop": "12px",
          "paddingBottom": "12px",
          "paddingLeft": "12px",
          "paddingRight": "12px",
          "paddingTop": "12px",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(31,41,55,1.00)",
            "fontSize": "14px",
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": "0px",
            "lineHeight": "1.5em",
          }
        }
      >
        タスク名: 
        タスク名
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(31,41,55,1.00)",
            "fontSize": "14px",
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": "0px",
            "lineHeight": "1.5em",
          }
        }
      >
        メモ: 
        メモ
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(31,41,55,1.00)",
            "fontSize": "14px",
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": "0px",
            "lineHeight": "1.5em",
          }
        }
      >
        ステータス: 
        実行中
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(31,41,55,1.00)",
            "fontSize": "14px",
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": "0px",
            "lineHeight": "1.5em",
          }
        }
      >
        期日: 
        2022-01-23T10:00:00+09:00
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(31,41,55,1.00)",
            "fontSize": "14px",
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": "0px",
            "lineHeight": "1.5em",
          }
        }
      >
        作業見積: 
        10
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(31,41,55,1.00)",
            "fontSize": "14px",
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": "0px",
            "lineHeight": "1.5em",
          }
        }
      >
        作業見積単位: 
        日
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(31,41,55,1.00)",
            "fontSize": "14px",
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": "0px",
            "lineHeight": "1.5em",
          }
        }
      >
        タグ: 
        テスト1, テスト2
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitFlexDirection": "row",
            "flexDirection": "row",
            "msFlexDirection": "row",
          }
        }
      >
        <div
          className="css-cursor-18t94o4 css-view-1dbjc4n"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="button"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitBoxPack": "center",
              "WebkitFlexDirection": "row",
              "WebkitJustifyContent": "center",
              "alignItems": "center",
              "backgroundColor": "rgba(6,182,212,1.00)",
              "borderBottomLeftRadius": "4px",
              "borderBottomRightRadius": "4px",
              "borderTopLeftRadius": "4px",
              "borderTopRightRadius": "4px",
              "cursor": "pointer",
              "flexDirection": "row",
              "justifyContent": "center",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
              "msFlexPack": "center",
              "msTouchAction": "manipulation",
              "outlineWidth": "0px",
              "paddingBottom": "8px",
              "paddingLeft": "12px",
              "paddingRight": "12px",
              "paddingTop": "8px",
              "touchAction": "manipulation",
            }
          }
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitAlignItems": "center",
                "WebkitBoxAlign": "center",
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexDirection": "row",
                "alignItems": "center",
                "flexDirection": "row",
                "msFlexAlign": "center",
                "msFlexDirection": "row",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
            >
              <div
                className="css-text-901oao"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontSize": "14px",
                    "fontStyle": "normal",
                    "fontWeight": "500",
                    "letterSpacing": "0px",
                    "lineHeight": "1.5em",
                  }
                }
              >
                Update
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "width": "8px",
            }
          }
        />
        <div
          className="css-cursor-18t94o4 css-view-1dbjc4n"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="button"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitBoxPack": "center",
              "WebkitFlexDirection": "row",
              "WebkitJustifyContent": "center",
              "alignItems": "center",
              "backgroundColor": "rgba(239,68,68,1.00)",
              "borderBottomLeftRadius": "4px",
              "borderBottomRightRadius": "4px",
              "borderTopLeftRadius": "4px",
              "borderTopRightRadius": "4px",
              "cursor": "pointer",
              "flexDirection": "row",
              "justifyContent": "center",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
              "msFlexPack": "center",
              "msTouchAction": "manipulation",
              "outlineWidth": "0px",
              "paddingBottom": "8px",
              "paddingLeft": "12px",
              "paddingRight": "12px",
              "paddingTop": "8px",
              "touchAction": "manipulation",
            }
          }
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitAlignItems": "center",
                "WebkitBoxAlign": "center",
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexDirection": "row",
                "alignItems": "center",
                "flexDirection": "row",
                "msFlexAlign": "center",
                "msFlexDirection": "row",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
            >
              <div
                className="css-text-901oao"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontSize": "14px",
                    "fontStyle": "normal",
                    "fontWeight": "500",
                    "letterSpacing": "0px",
                    "lineHeight": "1.5em",
                  }
                }
              >
                Delete
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Domain Components/Task Optional 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitFlex": 1,
      "flex": 1,
      "msFlex": "1 1 0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "display": "flex",
        "height": "100%",
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(204,204,204,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(204,204,204,1.00)",
          "borderLeftStyle": "solid",
          "borderLeftWidth": "1px",
          "borderRightColor": "rgba(204,204,204,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(204,204,204,1.00)",
          "borderTopStyle": "solid",
          "borderTopWidth": "1px",
          "marginBottom": "12px",
          "marginLeft": "12px",
          "marginRight": "12px",
          "marginTop": "12px",
          "paddingBottom": "12px",
          "paddingLeft": "12px",
          "paddingRight": "12px",
          "paddingTop": "12px",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(31,41,55,1.00)",
            "fontSize": "14px",
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": "0px",
            "lineHeight": "1.5em",
          }
        }
      >
        タスク名: 
        タスク
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(31,41,55,1.00)",
            "fontSize": "14px",
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": "0px",
            "lineHeight": "1.5em",
          }
        }
      >
        メモ: 
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(31,41,55,1.00)",
            "fontSize": "14px",
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": "0px",
            "lineHeight": "1.5em",
          }
        }
      >
        ステータス: 
        登録
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(31,41,55,1.00)",
            "fontSize": "14px",
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": "0px",
            "lineHeight": "1.5em",
          }
        }
      >
        期日: 
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(31,41,55,1.00)",
            "fontSize": "14px",
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": "0px",
            "lineHeight": "1.5em",
          }
        }
      >
        作業見積: 
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(31,41,55,1.00)",
            "fontSize": "14px",
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": "0px",
            "lineHeight": "1.5em",
          }
        }
      >
        作業見積単位: 
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(31,41,55,1.00)",
            "fontSize": "14px",
            "fontStyle": "normal",
            "fontWeight": "400",
            "letterSpacing": "0px",
            "lineHeight": "1.5em",
          }
        }
      >
        タグ: 
        
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitFlexDirection": "row",
            "flexDirection": "row",
            "msFlexDirection": "row",
          }
        }
      >
        <div
          className="css-cursor-18t94o4 css-view-1dbjc4n"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="button"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitBoxPack": "center",
              "WebkitFlexDirection": "row",
              "WebkitJustifyContent": "center",
              "alignItems": "center",
              "backgroundColor": "rgba(6,182,212,1.00)",
              "borderBottomLeftRadius": "4px",
              "borderBottomRightRadius": "4px",
              "borderTopLeftRadius": "4px",
              "borderTopRightRadius": "4px",
              "cursor": "pointer",
              "flexDirection": "row",
              "justifyContent": "center",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
              "msFlexPack": "center",
              "msTouchAction": "manipulation",
              "outlineWidth": "0px",
              "paddingBottom": "8px",
              "paddingLeft": "12px",
              "paddingRight": "12px",
              "paddingTop": "8px",
              "touchAction": "manipulation",
            }
          }
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitAlignItems": "center",
                "WebkitBoxAlign": "center",
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexDirection": "row",
                "alignItems": "center",
                "flexDirection": "row",
                "msFlexAlign": "center",
                "msFlexDirection": "row",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
            >
              <div
                className="css-text-901oao"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontSize": "14px",
                    "fontStyle": "normal",
                    "fontWeight": "500",
                    "letterSpacing": "0px",
                    "lineHeight": "1.5em",
                  }
                }
              >
                Update
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "width": "8px",
            }
          }
        />
        <div
          className="css-cursor-18t94o4 css-view-1dbjc4n"
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          role="button"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitBoxPack": "center",
              "WebkitFlexDirection": "row",
              "WebkitJustifyContent": "center",
              "alignItems": "center",
              "backgroundColor": "rgba(239,68,68,1.00)",
              "borderBottomLeftRadius": "4px",
              "borderBottomRightRadius": "4px",
              "borderTopLeftRadius": "4px",
              "borderTopRightRadius": "4px",
              "cursor": "pointer",
              "flexDirection": "row",
              "justifyContent": "center",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
              "msFlexPack": "center",
              "msTouchAction": "manipulation",
              "outlineWidth": "0px",
              "paddingBottom": "8px",
              "paddingLeft": "12px",
              "paddingRight": "12px",
              "paddingTop": "8px",
              "touchAction": "manipulation",
            }
          }
          tabIndex="0"
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "WebkitAlignItems": "center",
                "WebkitBoxAlign": "center",
                "WebkitBoxDirection": "normal",
                "WebkitBoxOrient": "horizontal",
                "WebkitFlexDirection": "row",
                "alignItems": "center",
                "flexDirection": "row",
                "msFlexAlign": "center",
                "msFlexDirection": "row",
              }
            }
          >
            <div
              className="css-view-1dbjc4n"
            >
              <div
                className="css-text-901oao"
                dir="auto"
                style={
                  Object {
                    "color": "rgba(255,255,255,1.00)",
                    "fontSize": "14px",
                    "fontStyle": "normal",
                    "fontWeight": "500",
                    "letterSpacing": "0px",
                    "lineHeight": "1.5em",
                  }
                }
              >
                Delete
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Page Components/Index Default 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitFlex": 1,
      "flex": 1,
      "msFlex": "1 1 0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "display": "flex",
        "height": "100%",
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitFlexDirection": "row",
          "flexDirection": "row",
          "msFlexDirection": "row",
        }
      }
    >
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "center",
            "WebkitFlexDirection": "row",
            "WebkitJustifyContent": "center",
            "alignItems": "center",
            "backgroundColor": "rgba(6,182,212,1.00)",
            "borderBottomLeftRadius": "4px",
            "borderBottomRightRadius": "4px",
            "borderTopLeftRadius": "4px",
            "borderTopRightRadius": "4px",
            "cursor": "pointer",
            "flexDirection": "row",
            "justifyContent": "center",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexPack": "center",
            "msTouchAction": "manipulation",
            "outlineWidth": "0px",
            "paddingBottom": "8px",
            "paddingLeft": "12px",
            "paddingRight": "12px",
            "paddingTop": "8px",
            "touchAction": "manipulation",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "alignItems": "center",
              "flexDirection": "row",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
          >
            <div
              className="css-text-901oao"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "fontSize": "14px",
                  "fontStyle": "normal",
                  "fontWeight": "500",
                  "letterSpacing": "0px",
                  "lineHeight": "1.5em",
                }
              }
            >
              ログアウト
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "width": "8px",
          }
        }
      />
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "center",
            "WebkitFlexDirection": "row",
            "WebkitJustifyContent": "center",
            "alignItems": "center",
            "backgroundColor": "rgba(6,182,212,1.00)",
            "borderBottomLeftRadius": "4px",
            "borderBottomRightRadius": "4px",
            "borderTopLeftRadius": "4px",
            "borderTopRightRadius": "4px",
            "cursor": "pointer",
            "flexDirection": "row",
            "justifyContent": "center",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexPack": "center",
            "msTouchAction": "manipulation",
            "outlineWidth": "0px",
            "paddingBottom": "8px",
            "paddingLeft": "12px",
            "paddingRight": "12px",
            "paddingTop": "8px",
            "touchAction": "manipulation",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "alignItems": "center",
              "flexDirection": "row",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
          >
            <div
              className="css-text-901oao"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "fontSize": "14px",
                  "fontStyle": "normal",
                  "fontWeight": "500",
                  "letterSpacing": "0px",
                  "lineHeight": "1.5em",
                }
              }
            >
              追加
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Page Components/Index Not Loaded 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitFlex": 1,
      "flex": 1,
      "msFlex": "1 1 0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "display": "flex",
        "height": "100%",
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitFlexDirection": "row",
          "flexDirection": "row",
          "msFlexDirection": "row",
        }
      }
    >
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "center",
            "WebkitFlexDirection": "row",
            "WebkitJustifyContent": "center",
            "alignItems": "center",
            "backgroundColor": "rgba(6,182,212,1.00)",
            "borderBottomLeftRadius": "4px",
            "borderBottomRightRadius": "4px",
            "borderTopLeftRadius": "4px",
            "borderTopRightRadius": "4px",
            "cursor": "pointer",
            "flexDirection": "row",
            "justifyContent": "center",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexPack": "center",
            "msTouchAction": "manipulation",
            "outlineWidth": "0px",
            "paddingBottom": "8px",
            "paddingLeft": "12px",
            "paddingRight": "12px",
            "paddingTop": "8px",
            "touchAction": "manipulation",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "alignItems": "center",
              "flexDirection": "row",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
          >
            <div
              className="css-text-901oao"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "fontSize": "14px",
                  "fontStyle": "normal",
                  "fontWeight": "500",
                  "letterSpacing": "0px",
                  "lineHeight": "1.5em",
                }
              }
            >
              ログアウト
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "width": "8px",
          }
        }
      />
      <div
        className="css-cursor-18t94o4 css-view-1dbjc4n"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxDirection": "normal",
            "WebkitBoxOrient": "horizontal",
            "WebkitBoxPack": "center",
            "WebkitFlexDirection": "row",
            "WebkitJustifyContent": "center",
            "alignItems": "center",
            "backgroundColor": "rgba(6,182,212,1.00)",
            "borderBottomLeftRadius": "4px",
            "borderBottomRightRadius": "4px",
            "borderTopLeftRadius": "4px",
            "borderTopRightRadius": "4px",
            "cursor": "pointer",
            "flexDirection": "row",
            "justifyContent": "center",
            "msFlexAlign": "center",
            "msFlexDirection": "row",
            "msFlexPack": "center",
            "msTouchAction": "manipulation",
            "outlineWidth": "0px",
            "paddingBottom": "8px",
            "paddingLeft": "12px",
            "paddingRight": "12px",
            "paddingTop": "8px",
            "touchAction": "manipulation",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitAlignItems": "center",
              "WebkitBoxAlign": "center",
              "WebkitBoxDirection": "normal",
              "WebkitBoxOrient": "horizontal",
              "WebkitFlexDirection": "row",
              "alignItems": "center",
              "flexDirection": "row",
              "msFlexAlign": "center",
              "msFlexDirection": "row",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
          >
            <div
              className="css-text-901oao"
              dir="auto"
              style={
                Object {
                  "color": "rgba(255,255,255,1.00)",
                  "fontSize": "14px",
                  "fontStyle": "normal",
                  "fontWeight": "500",
                  "letterSpacing": "0px",
                  "lineHeight": "1.5em",
                }
              }
            >
              追加
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "WebkitBoxDirection": "normal",
          "WebkitBoxOrient": "horizontal",
          "WebkitFlexDirection": "row",
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": "4px",
          "marginTop": "4px",
          "msFlexAlign": "center",
          "msFlexDirection": "row",
        }
      }
    >
      <div
        aria-label="loading"
        aria-valuemax={1}
        aria-valuemin={0}
        className="css-view-1dbjc4n"
        role="progressbar"
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "WebkitBoxPack": "center",
            "WebkitJustifyContent": "center",
            "alignItems": "center",
            "justifyContent": "center",
            "msFlexAlign": "center",
            "msFlexPack": "center",
          }
        }
        tabIndex="0"
      >
        <div
          className="css-view-1dbjc4n r-animationKeyframes-127358a"
          style={
            Object {
              "WebkitAnimationDuration": "0.75s",
              "WebkitAnimationIterationCount": "infinite",
              "WebkitAnimationTimingFunction": "linear",
              "animationDuration": "0.75s",
              "animationIterationCount": "infinite",
              "animationTimingFunction": "linear",
              "height": "20px",
              "width": "20px",
            }
          }
        >
          <svg
            height="100%"
            viewBox="0 0 32 32"
            width="100%"
          >
            <circle
              cx="16"
              cy="16"
              fill="none"
              r="14"
              strokeWidth="4"
              style={
                Object {
                  "opacity": 0.2,
                  "stroke": "#06b6d4",
                }
              }
            />
            <circle
              cx="16"
              cy="16"
              fill="none"
              r="14"
              strokeWidth="4"
              style={
                Object {
                  "stroke": "#06b6d4",
                  "strokeDasharray": 80,
                  "strokeDashoffset": 60,
                }
              }
            />
          </svg>
        </div>
      </div>
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "width": "8px",
          }
        }
      />
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(6,182,212,1.00)",
            "fontSize": "16px",
            "fontStyle": "normal",
            "fontWeight": "700",
            "letterSpacing": "0px",
            "lineHeight": "1.25em",
          }
        }
      >
        Loading...
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Page Components/Index Not Logged In 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitFlex": 1,
      "flex": 1,
      "msFlex": "1 1 0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "display": "flex",
        "height": "100%",
        "overflowX": "hidden",
        "overflowY": "hidden",
      }
    }
  />
</div>
`;
